// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PieChart > matches snapshot for basic chart 1`] = `
<div>
  <div>
    <div
      class="text-sm font-medium text-slate-300 mb-3"
    >
      产品销售分布
    </div>
    <div
      data-props="{"data":[{"type":"产品A","value":300},{"type":"产品B","value":200},{"type":"产品C","value":150}],"angleField":"value","colorField":"type","height":300,"radius":0.9,"innerRadius":0,"label":{"type":"outer","style":{"fill":"#94a3b8","fontSize":12}},"tooltip":{},"legend":{"position":"right","itemName":{"style":{"fill":"#94a3b8"}}},"interactions":[{"type":"element-active"},{"type":"pie-legend-active"}],"animation":{"appear":{"animation":"fade-in","duration":800}},"statistic":false}"
      data-testid="ant-pie"
    />
  </div>
</div>
`;

exports[`PieChart > matches snapshot for empty state 1`] = `
<div>
  <div
    class="flex items-center justify-center text-slate-400"
    style="height: 300px;"
  >
    暂无数据
  </div>
</div>
`;
